--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "run-the-minter",
+  "name": "NorbertTC",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -15,6 +15,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.1",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "^5.5.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/react": "^7.0.0",
